--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,11 @@
     <link href="metronic_assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
 
+    <!-- FOR THE GRAPHS -->
+    <link rel="stylesheet" href="http://www.amcharts.com/lib/3/plugins/export/export.css">
+    <!-- FOR THE GRAPHS -->
+
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
 
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -56,7 +61,7 @@
 
 
             <!-- INFO -->
-            <div class="info speechbubble">
+            <div class="content-info speechbubble">
                 The inspiration for this idea came from watching philosophy debates involving Deepak Chopra. I wrote a blog post about it if you're interested.
 
                 After sitting through hours of New Age rhetoric, I decided to have a crack at writing code to generate it automatically and speed things up a bit. I cobbled together a list of New Age buzzwords and cliché sentence patterns and this is the result.
@@ -99,15 +104,16 @@
 
     <!-- normal script imports etc  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <script src="metronic_assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <script src="metronic_assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="metronic_assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-    <script src="metronic_assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
-    <script src="metronic_assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <script src="metronic_assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
     <script src="metronic_assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-    <script src="metronic_assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script type="text/javascript" src="https://www.amcharts.com/lib/3/serial.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/plugins/export/export.js"></script>
+
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="js/tombot.js"></script>
