--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
     <script type="text/javascript" src="https://www.amcharts.com/lib/3/amcharts.js"></script>
     <script type="text/javascript" src="https://www.amcharts.com/lib/3/serial.js"></script>
     <script type="text/javascript" src="http://www.amcharts.com/lib/3/plugins/export/export.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/pie.js"></script>
 
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
