Tuesday 28th November

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
             <!-- CONVERSATION -->
             <div class="conversation question" style="display:none;">
                 <label></label>
-                <input type="text" class="input-conversation form-control">
+                <input type="text" class="form-control">
             </div>
             <!-- CONVERSATION -->
 
