New help layout

--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -91,18 +91,18 @@
 
       <div id="help_item">
        
-        <div class="copy-item">
+        <div class="slide">
 
           <div>
-            <span class="title">{{title}}</span>
+            <span class="title">Let me see if I can help you! </span>
             <span class="pull-right">
               <button type="button" class="btn btn-lg yellow-gold ask-me">GOT IT! ASK A QUESTION</button>
             </span>
           </div>
 
-          <p>Let me see if I can help! Here are some of the questions I can answer...</p>
+          <p>Some say I am very good at my job but I am not perfect. Here are some examples of the questions I can answer...</p>
 
-          <ul>
+          <ul class="help-list-questions">
             <li><a href="#">What are the top trends at CES this hour?</a></li>
             <li><a href="#">What has been the biggest moment at CES so far?</a></li>
             <li><a href="#">Where in the world are people talking about CES 2018 the most?</a></li>
