--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,8 @@
     <!-- FOR THE GRAPHS -->
 
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
 
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
@@ -63,13 +64,6 @@
             <!-- INFO -->
             <div class="content-info speechbubble">
                 The inspiration for this idea came from watching philosophy debates involving Deepak Chopra. I wrote a blog post about it if you're interested.
-
-                After sitting through hours of New Age rhetoric, I decided to have a crack at writing code to generate it automatically and speed things up a bit. I cobbled together a list of New Age buzzwords and cliché sentence patterns and this is the result.
-
-                You’ll get some profound-sounding nonsense here, too.
-                So, what is this for? Put it on your website as placeholder text. Print it out as a speech for your yoga class and see if anyone can guess a computer wrote it. Use it to write the hottest new bestseller in the self-help section, or give false hope to depressed friends and family members.
-
-                (If you haven’t seen it, check out wisdomofchopra.com — unfortunately they beat me to it! I came across that page a few days after I’d finished the vocabulary list for this one. Must be synchronicity at work.)
             </div>
             <!-- INFO -->
 
