Responsive font size

--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -43,18 +43,21 @@
           </span>
         </div>
 
-        <p>Some say I am very good at my job but I am not perfect. Here are some examples of the questions I can answer...</p>
+        <div class="help">
 
-        <ul class="help-list-questions">
-          <li><a href="#">What are the top trends at CES this hour?</a></li>
-          <li><a href="#">What has been the biggest moment at CES so far?</a></li>
-          <li><a href="#">Where in the world are people talking about CES 2018 the most?</a></li>
-          <li><a href="#">What are the big news stories at CES today?</a></li>
-          <li><a href="#">How many conference sessions are there at CES this year?</a></li>
-          <li><a href="#">How many exhibitors are attending CES this year? </a></li>
-          <li><a href="#">How many people attended CES last year?</a></li>
-        </ul>
+          <p>Some say I am very good at my job but I am not perfect. Here are some examples of the questions I can answer...</p>
 
+          <ul class="help-list-questions">
+            <li><a href="#">What are the top trends at CES this hour?</a></li>
+            <li><a href="#">What has been the biggest moment at CES so far?</a></li>
+            <li><a href="#">Where in the world are people talking about CES 2018 the most?</a></li>
+            <li><a href="#">What are the big news stories at CES today?</a></li>
+            <li><a href="#">How many conference sessions are there at CES this year?</a></li>
+            <li><a href="#">How many exhibitors are attending CES this year? </a></li>
+            <li><a href="#">How many people attended CES last year?</a></li>
+          </ul>
+
+        </div>
        
       </div>
       
