--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -166,17 +166,17 @@
             <span class="tw-icon">
               <i class="fa fa-2x fa-twitter"></i>
             </span>
-            <div class="name">PETER MALONE <small>@petermalone</small></div>
-            <div class="date">On the 13th October 2017 at 17:19h</div>
+            <div class="name">{{user.name}} <small>@{{user.username}}</small></div>
+            <div class="date">{{tweet_date_ago}}</div>
           </div>
 
           <div class="row tweet__main">
             <div class="col-md-3">
-              <img src="https://s-media-cache-ak0.pinimg.com/originals/cb/96/bb/cb96bbecf8b5bc9f114fde6f8be8ccc7.jpg" width="100%"/>
+              <img src="{{user.profile_image_big}}" width="100%"/>
             </div>
 
             <div class="col-md-9">
-               Namaste. Do you want to sell a New Age product and/or service? Tired of coming up with meaningless copy for your starry-eyed customers? Want to join the ranks of bestselling self-help authors? We can help.
+              {{content}}
             </div>
           </div>
 
