Thursday 6th, auto question ready

--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,13 @@
 
   <body>
 
+    <div class="control_timer">
+        <span class="state"></span>
+        <div class="time"></div>
+    </div>
 
-      <div class="main_container">
+    <div class="main_container">
+
 
         <div class="row ">
 
@@ -56,14 +61,14 @@
             <!-- CONVERSATION -->
             <div class="conversation question" style="display:none;">
                 <label></label>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" disabled="disabled">
             </div>
             <!-- CONVERSATION -->
 
 
             <!-- INFO -->
             <div class="content-info speechbubble">
-                The inspiration for this idea came from watching philosophy debates involving Deepak Chopra. I wrote a blog post about it if you're interested.
+                
             </div>
             <!-- INFO -->
 
