adding a flag for location URL

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 
   <body>
 
-    <div class="control_timer">
+    <div class="control_timer" style="display: none;">
         <span class="state"></span>
         <div class="time"></div>
     </div>
