--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -34,24 +34,15 @@
       <div class="slide">
 
         <div class="title">
-          <span><i class="fa fa-chevron-right"></i> I sense you need some help </span><a href="#" class="pull-right ask-me">Got It! Ask a Question</a>
+          <span><i class="fa fa-chevron-right"></i> {{answer}} </span><a href="#" class="pull-right ask-me">Got It! Ask a Question</a>
         </div>
 
         <div class="help">
 
-          <p>Some say I am very good at my job but I am not perfect. Here are some examples of the questions I can answer...</p>
+          <p>{{subheader}}</p>
 
           <ul class="help-list-questions">
-            <li>What are the top trends at CES this hour?</li>
-            <li>What has been the biggest moment at CES so far?</li>
-            <li>Where in the world are people talking about CES 2018 the most?</li>
-            <li>What are the big news stories at CES today?</li>
-            <li>How many conference sessions are there at CES this year?</li>
-            <li>How many exhibitors are attending CES this year? </li>
-            <li>How many people attended CES last year?</li>
-            <li>How many people have attended CES this week so far?</li>
-            <li>What events are happening now / today / tomorrow?</li>
-            <li>How many sq feet is CES?</li>
+            {{{suggestions}}}
           </ul>
 
         </div>
@@ -304,6 +295,9 @@
       
 
     </div>
+
+
+
 
 
 
