All Social related questions have been tested. Only minor issues

--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -186,7 +186,7 @@
             <span class="date pull-right">{{date}}</span>
           </div>
           <div class="title">
-            {{newstitle}}
+            {{title}}
           </div>
           
           <div class="row news__main">
