Fixing issue with BG Image Cover

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 
   </head>
 
-  <body style="background: url('http://www.buzzradar.com/ces2018/kioskapp/assets/cesbot_bg.jpg') no-repeat center center fixed">
+  <body style="background: url('http://www.buzzradar.com/ces2018/kioskapp/assets/cesbot_bg.jpg') no-repeat center center fixed;-moz-background-size: cover;-o-background-size: cover;-webkit-background-size: cover;background-size: cover;">
 
     <div class="control_timer" style="display: none;">
         <span class="state"></span>
