--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -284,7 +284,7 @@
           <div class="row">
             <div class="col-md-12 text-center">
 
-              <span>56</span>
+              <span>{{number}}</span>
 
             </div>
           </div>
