New Events Layout

--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -218,38 +218,36 @@
 
 
 
-    <div id="keynotes_item">
+    <div id="events_item">
      
       <div class="slide">
 
 
         <div class="title">
-          <span><i class="fa fa-chevron-right"></i> {{answer}} </span><a href="#" class="pull-right ask-me">Ask a New Question</a>
+          <span><i class="fa fa-chevron-right"></i> I have found 23 Events </span><a href="#" class="pull-right ask-me">Ask a New Question</a>
         </div>
 
 
         <div class="keynotes">
 
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
 
-              <div class="item">
-                <div class="when now">NOW</div>
-                <div class="location"> <i class="fa fa-map-marker"></i> Monte Carlo, Park Theater</div>
-                <div class="time"> <i class="fa fa-clock-o"></i> 6:30-7:30 PM</div>
-                <div class="keynote"></i> Brian Krzanich Chief Executive Officer (CEO) of Intel</div>
-              </div>
-
-            </div>
-            <div class="col-md-6">
-
-              <div class="item">
-                <div class="when next">NEXT</div>
-                <div class="location"> <i class="fa fa-map-marker"></i> Monte Carlo, Park Theater</div>
-                <div class="time"> <i class="fa fa-clock-o"></i> 6:30-7:30 PM</div>
-                <div class="keynote"></i> Gary Shapiro President and CEO Consumer Technology Association (CTA)</div>
-              </div>
               
+
+              <div class="item">
+                <div class="when now">
+                  EVENT 1
+                </div>
+                <div class="keynote">Brian Krzanich Chief Executive Officer (CEO) of Intel</div>
+                <div class="location"> <i class="fa fa-map-marker"></i> Monte Carlo, Park Theater</div>
+                <div class="time"> <i class="fa fa-clock-o"></i> 6:30-7:30 PM</div>
+                <div class="controls">
+                  <button type="button" class="btn green-dark btn-xs previous">Previous Event</button>
+                  <button type="button" class="btn purple-soft btn-xs next">Next Event</button>
+                </div>
+              </div>
+
             </div>
           </div>
 
