Friday before going home

--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -224,7 +224,7 @@
 
 
         <div class="title">
-          <span><i class="fa fa-chevron-right"></i> I have found 23 Events </span><a href="#" class="pull-right ask-me">Ask a New Question</a>
+          <span><i class="fa fa-chevron-right"></i> {{answer}} </span><a href="#" class="pull-right ask-me">Ask a New Question</a>
         </div>
 
 
