--- a/app/tpl/HandlebarTemplates.html
+++ b/app/tpl/HandlebarTemplates.html
@@ -243,8 +243,8 @@
                 <div class="location"> <i class="fa fa-map-marker"></i> Monte Carlo, Park Theater</div>
                 <div class="time"> <i class="fa fa-clock-o"></i> 6:30-7:30 PM</div>
                 <div class="controls">
-                  <button type="button" class="btn green-dark btn-xs previous">Previous Event</button>
-                  <button type="button" class="btn purple-soft btn-xs next">Next Event</button>
+                  <button type="button" class="btn green-dark btn-xs previous-events-btn">Previous Event</button>
+                  <button type="button" class="btn purple-soft btn-xs next-events-btn">Next Event</button>
                 </div>
               </div>
 
